loadtest/k8s-files/apigee-mock-server.yaml
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock-apigee
  namespace: apigee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mock-apigee
      version: v1
  template:
    metadata:
      labels:
        app: mock-apigee
        version: v1
    spec:
      tolerations:
      - key: "mock-apigee"
        operator: "Exists"
        effect: "NoSchedule"
      containers:
      - image: gcr.io/[PROJECT_ID]/apigee-mock:test
        imagePullPolicy: Always
        name: mock-apigee
        args:
          - -addr
          - :6000
          - -num-products
          - "1000"
          - -host
          - mock-apigee.apigee.svc.cluster.local
      #     - -tls
      #     - /tls
      #   volumeMounts:
      #   - mountPath: /tls
      #     name: tls-volume
      #     readOnly: true
      # volumes:
      # - name: tls-volume
      #   secret:
      #     defaultMode: 420
      #     secretName: test-apigee-mock-tls
---
apiVersion: v1
kind: Service
metadata:
  name: mock-apigee
  namespace: apigee
  labels:
    app: mock-apigee
spec:
  ports:
  - name: http
    port: 6000
    targetPort: 6000
  selector:
    app: mock-apigee
