loadtest/k8s-files/locust-worker.yaml
# Copyright 2015 Google Inc. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-worker
  namespace: apigee
  labels:
    name: locust-worker
spec:
  replicas: 20
  selector:
    matchLabels:
      app: locust-worker
  template:
    metadata:
      labels:
        app: locust-worker
    spec:
      tolerations:
      - key: "locust"
        operator: "Exists"
        effect: "NoSchedule"
      containers:
      - name: locust-worker
        image: docker.io/locustio/locust
        args:
          - -f
          - /config/locustfile.py
          - -H
          - http://target.apigee.svc.cluster.local
          - --master-host
          - locust-manager.apigee.svc.cluster.local
          - --worker
        resources:
          limits:
            cpu: 1000m
            memory: 200Mi
          requests:
            cpu: 200m
            memory: 100Mi
        volumeMounts:
          - mountPath: /config
            name: locust-config
            readOnly: true
      volumes:
        - name: locust-config
          configMap:
            name: locust-config
