loadtest/k8s-files/target-server.yaml
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: target
  namespace: apigee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: target
      version: v1
  template:
    metadata:
      labels:
        app: target
        version: v1
    spec:
      containers:
      - image: gcr.io/[PROJECT_ID]/target-mock:test
        imagePullPolicy: IfNotPresent
        name: target-mock
        args:
          - -addr
          - :6001
      - image: docker.io/envoyproxy/envoy:v1.15.0
        name: envoy-proxy
        ports:
          - containerPort: 8080
        args:
          - -c
          - /config/config.yaml
          - -l
          - debug
        volumeMounts:
          - mountPath: /config
            name: test-envoy-config
            readOnly: true
      volumes:
        - name: test-envoy-config
          configMap:
            name: test-envoy-config
---
apiVersion: v1
kind: Service
metadata:
  name: target
  namespace: apigee
  labels:
    app: target
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: target
